istio-test.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-app
  name: demo-app
  labels:
    app: demo-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-app
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      version: v1
  template:
    metadata:
      labels:
        app: demo-app
        version: v1
    spec:
      containers:
        - image: mendhak/http-https-echo
          imagePullPolicy: IfNotPresent
          name: demo-app
          ports:
            - name: http
              containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: istio-ingress
  name: demo-app-gateway
spec:
  selector:
    app: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo-app
  name: demo-app
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/demo-app-gateway
  http:
    - match:
        - uri:
            prefix: /demo-app
      rewrite:
        uri: /
      route:
        - destination:
            host: demo-app
            port:
              number: 80
